Fix layout issue after frame removal in 6.3

--- a/src/css/bct.scss
+++ b/src/css/bct.scss
@@ -90,7 +90,8 @@ body.bct-metadata-open .page-builder-side-bar {
   min-height: 300px;
   position: fixed;
   right: -420px;
-  top: 0px;
+  top: 110px;
+  height: calc(100% - 110px);
   pointer-events: auto;
   cursor: auto;
   visibility: visible;
@@ -98,7 +99,6 @@ body.bct-metadata-open .page-builder-side-bar {
   overflow-x: hidden;
   border-radius: 0;
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.04), 0px 1px 12px 4px rgba(0, 0, 0, 0.12);
-  height: 100%;
   z-index: 9999;
   padding: 30px 0 30px;
 }
@@ -221,9 +221,11 @@ body.sq .sq-bodycopy-edit-wrapper {
   cursor: pointer;
   font-size: 12px;
   position: absolute;
-  right: -50px;
-  top: -5px;
+  right: 3px;
+  top: 2px;
   box-shadow: 0 0 0 1px rgba(0,0,0,0.04), 0 1px 4px 2px rgba(0,0,0,0.08);
+  z-index: 1;
+  zoom: 0.8;
 }
 
 .bct-metadata-toggle:hover {
